~ Mod page title to something generic ~ Move normalize stylesheet import

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <!-- Search engine and Bookmark titles -->
-    <title>Your Time Machine is Stuck in Reverse, by Geoffrey Golden</title>
+    <title>
+      Interactive Fiction and Choose Your Own Adventure, by Geoffrey Golden
+    </title>
     <!-- No messy with this :) -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Optional description for search engine result pages. Use 155-160 characters max. Google will truncate beyond that.  -->
@@ -12,7 +14,7 @@
       content="Interactive Story: You'd like to expand your vehicle collection and decide to steal a time machine car. Once in though, hell, how do you operate this thing?"
     /> -->
     <!-- Reset/Normalize stylesheet for multibrowser conformity -->
-    <link rel="stylesheet" href="./modern-normalize.min.css" />
+    <link rel="stylesheet" href="./styles/modern-normalize.min.css" />
     <!-- The master stylesheet -->
     <link rel="stylesheet" href="./styles/globals.css" />
   </head>
