--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       </header>
 
       <!-- Hide story until finished loading -->
-      <main id="story" style="visibility: hidden">
+      <main id="story">
         <!-- STORY INSERTED BY SCRIPT HERE -->
       </main>
     </div>
 
-    <script src="ink.js"></script>
+    <script src="./src/ink.js"></script>
     <script src="time-machine-reverse.js"></script>
-    <script src="main.js"></script>
+    <script src="./src/main.js"></script>
   </body>
 </html>
