~ Hide story container on initialize

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </header>
 
       <!-- Hide story until finished loading -->
-      <main id="story">
+      <main id="story" style="opacity: 0">
         <!-- STORY INSERTED BY SCRIPT HERE -->
       </main>
     </div>
