--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     </title>
     <!-- No messy with this :) -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Optional description for search engine result pages. Use 155-160 characters max. Google will truncate beyond that.  -->
-    <!-- <meta
-      name="description"
-      content="Interactive Story: You'd like to expand your vehicle collection and decide to steal a time machine car. Once in though, hell, how do you operate this thing?"
-    /> -->
     <!-- Reset/Normalize stylesheet for multibrowser conformity -->
     <link rel="stylesheet" href="./styles/modern-normalize.min.css" />
     <!-- The master stylesheet -->
@@ -28,8 +23,11 @@
 
         <nav id="controls" class="buttons">
           <a id="restart" title="Restart story from beginning">Restart</a>
+          <span>|</span>
           <a id="save" title="Save progress">Save</a>
+          <span>|</span>
           <a id="reload" title="Reload from save point">Load</a>
+          <span>|</span>
           <a id="theme-switch" title="Switch theme">Theme</a>
         </nav>
       </header>
