+ Add mobile top bar color theme switching

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </title>
     <!-- No messy with this :) -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- This allows adjusting iOS device (and more?) info bar via the 'Theme' control button -->
+    <meta name="theme-color" content="" />
     <!-- Reset/Normalize stylesheet for multibrowser conformity -->
     <link rel="stylesheet" href="./styles/modern-normalize.min.css" />
     <!-- The master stylesheet -->
