--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./styles/modern-normalize.min.css" />
     <style type="text/css" id="headStyle"></style>
     <!-- Fonts -->
-    <script src="./head.js" rel="preload"></script>
+    <script src="./src/head.js" rel="preload"></script>
     <!-- The master stylesheet -->
     <link rel="stylesheet" href="./styles/globals.css" />
   </head>
