~ Rename story file to 'story.js'

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <script src="./src/ink.js"></script>
-    <script src="time-machine-reverse.js"></script>
+    <script src="story.js"></script>
     <script src="./src/main.js"></script>
   </body>
 </html>
