+ Add wrapper for header to use for border deco

--- a/index.html
+++ b/index.html
@@ -22,21 +22,23 @@
 
   <body>
     <div id="root">
-      <header id="header">
-        <h1 class="producer">
-          <a href="https://www.adventuresnack.com/">ADVENTURE SNACK</a>
-        </h1>
+      <div id="header-box">
+        <header id="header">
+          <h1 class="producer">
+            <a href="https://www.adventuresnack.com/">ADVENTURE SNACK</a>
+          </h1>
 
-        <nav id="controls" class="buttons">
-          <a id="restart" title="Restart story from beginning">Restart</a>
-          <span>|</span>
-          <a id="save" title="Save progress">Save</a>
-          <span>|</span>
-          <a id="reload" title="Reload from save point">Load</a>
-          <span>|</span>
-          <a id="theme-switch" title="Switch theme">Theme</a>
-        </nav>
-      </header>
+          <nav id="controls" class="buttons">
+            <a id="restart" title="Restart story from beginning">Restart</a>
+            <span>|</span>
+            <a id="save" title="Save progress">Save</a>
+            <span>|</span>
+            <a id="reload" title="Reload from save point">Load</a>
+            <span>|</span>
+            <a id="theme-switch" title="Switch theme">Theme</a>
+          </nav>
+        </header>
+      </div>
 
       <!-- Hide story until finished loading -->
       <div id="story-box">
