~ update link url

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div id="root">
       <div id="header-box">
         <header id="header">
+          <!-- NOTE: Consider changing 'producer' to something generic, considering the header could also be used for the story title -->
           <h1 class="producer">
             <a href="https://www.adventuresnack.com/">ADVENTURE SNACK</a>
           </h1>
